AnalizadorLexico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASIG
    EQ_ESTRIC
    INC
    INTERROGACION
    MOD
    NOE_ESTRIC
    NOT

Grammar

Rule 0     S' -> codigo
Rule 1     codigo -> algoritmo
Rule 2     codigo -> algoritmo codigo
Rule 3     algoritmo -> asignacion
Rule 4     algoritmo -> sentenciaWHILE
Rule 5     algoritmo -> sentenciaIf
Rule 6     algoritmo -> comentarios
Rule 7     algoritmo -> switch
Rule 8     algoritmo -> sentenciaFor
Rule 9     algoritmo -> crearVariable
Rule 10    algoritmo -> crearObjeto
Rule 11    algoritmo -> crearFunction
Rule 12    algoritmo -> estructuraArreglo
Rule 13    algoritmo -> sentenciaOR
Rule 14    algoritmo -> sentenciaAND
Rule 15    algoritmo -> comparaciones
Rule 16    algoritmo -> metodosArreglos
Rule 17    algoritmo -> sentenciaDo
Rule 18    algoritmo -> estructuraMap
Rule 19    algoritmo -> funcionesMap
Rule 20    algoritmo -> metodosTupla
Rule 21    algoritmo -> console
Rule 22    sentenciaDo -> DO LIZQ codigo LDER WHILE PIZQ comparacion PDER PCOMA
Rule 23    estructuraMap -> VAR variables IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
Rule 24    estructuraMap -> LET variables IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
Rule 25    funcionesMap -> variables PUNTO ADD PIZQ expresion PDER PCOMA
Rule 26    funcionesMap -> variables PUNTO HAS PIZQ expresion PDER PCOMA
Rule 27    funcionesMap -> variables PUNTO FOREACH PIZQ PIZQ VARIABLE PDER DERECHA LIZQ console LDER PDER PCOMA
Rule 28    sentenciaWHILE -> WHILE PIZQ comparacion PDER LIZQ codigo LDER
Rule 29    estructuraArreglo -> VAR variables IGUAL CIZQ conjunto CDER PCOMA
Rule 30    metodosArreglos -> variables PUNTO PUSH PIZQ expresion PDER PCOMA
Rule 31    metodosArreglos -> variables PUNTO POP PIZQ PDER PCOMA
Rule 32    metodosArreglos -> variables PUNTO JOIN PIZQ PDER PCOMA
Rule 33    conjunto -> valor
Rule 34    conjunto -> valor COMA conjunto
Rule 35    asignacion -> VAR variables tipoasignacion expresion PCOMA
Rule 36    tipoasignacion -> IGUAL
Rule 37    tipoasignacion -> ASIG_SUMA
Rule 38    tipoasignacion -> ASIG_MEN
Rule 39    tipoasignacion -> ASIG_DIV
Rule 40    tipoasignacion -> ASIG_MUL
Rule 41    tipoasignacion -> ASIG_BOR
Rule 42    tipoasignacion -> ASIG_BAN
Rule 43    tipoasignacion -> ASIG_XOR
Rule 44    tipoasignacion -> ASIG_RESDU
Rule 45    tipoasignacion -> ASIG_EXPO
Rule 46    tipoasignacion -> ASIG_DE_I
Rule 47    tipoasignacion -> ASIG_DE_D
Rule 48    tipoasignacion -> ASIG_DSG
Rule 49    tipoasignacion -> ASIG_OR
Rule 50    tipoasignacion -> ASIG_ANU
Rule 51    expresion -> valor operadorMat expresion
Rule 52    expresion -> PIZQ valor operadorMat expresion PDER
Rule 53    expresion -> valor
Rule 54    comparacion -> expresion operadorComp expresion
Rule 55    comparaciones -> comparacion PCOMA
Rule 56    comparaciones -> comparacion AND comparacion PCOMA
Rule 57    comparaciones -> comparacion OR comparacion PCOMA
Rule 58    sentenciaAND -> expresion AND expresion PCOMA
Rule 59    sentenciaOR -> expresion OR expresion PCOMA
Rule 60    operadorMat -> MAS
Rule 61    operadorMat -> RESTA
Rule 62    operadorMat -> PROD
Rule 63    operadorMat -> DIVISION
Rule 64    operadorMat -> POTENCIA
Rule 65    operadorComp -> MAYOR
Rule 66    operadorComp -> MENOR
Rule 67    operadorComp -> COMP_IGUAL
Rule 68    operadorComp -> DIFERENTE
Rule 69    valor -> ENTERO
Rule 70    valor -> variables
Rule 71    valor -> CADENA
Rule 72    valor -> TRUE
Rule 73    valor -> FALSE
Rule 74    variables -> VARIABLE
Rule 75    variables -> CONSTANTE
Rule 76    sentenciaIf -> IF PIZQ comparacion PDER LIZQ codigo LDER
Rule 77    sentenciaIf -> IF PIZQ comparacion PDER LIZQ codigo LDER ELSE LIZQ codigo LDER
Rule 78    comentarios -> COMENTARIO_EN_LINEA
Rule 79    comentarios -> COMENTARIO_MULTILINEA
Rule 80    metodosTupla -> variables PUNTO INDEX PIZQ expresion PDER PCOMA
Rule 81    metodosTupla -> variables PUNTO COUNT PIZQ variables PDER PCOMA
Rule 82    metodosTupla -> LEN PIZQ variables PDER PCOMA
Rule 83    switch -> SWITCH PIZQ expresion PDER cuerpoSwitch
Rule 84    cuerpoSwitch -> case
Rule 85    cuerpoSwitch -> default
Rule 86    case -> CASE COMILL valor COMILL COLON codigo BREAK PCOMA
Rule 87    default -> DEFAULT COLON codigo
Rule 88    console -> CONSOLE PUNTO LOG PIZQ PDER PCOMA
Rule 89    sentenciaFor -> FOR PIZQ condicionFor PDER LIZQ codigo LDER
Rule 90    condicionFor -> asignacion PCOMA comparacion PCOMA variables DEC
Rule 91    crearVariable -> instruccionVL VARIABLE IGUAL CONSTANTE
Rule 92    crearVariable -> ENTERO
Rule 93    crearVariable -> CADENA
Rule 94    instruccionVL -> VAR
Rule 95    instruccionVL -> LET
Rule 96    crearObjeto -> CONST variables IGUAL NEW OBJECT PIZQ PDER PCOMA
Rule 97    crearFunction -> FUNCTION variables PIZQ conjunto PDER LIZQ cuerpoFunction LDER
Rule 98    cuerpoFunction -> THIS PUNTO variables IGUAL variables PCOMA

Terminals, with rules where they appear

ADD                  : 25
AND                  : 56 58
ASIG                 : 
ASIG_ANU             : 50
ASIG_BAN             : 42
ASIG_BOR             : 41
ASIG_DE_D            : 47
ASIG_DE_I            : 46
ASIG_DIV             : 39
ASIG_DSG             : 48
ASIG_EXPO            : 45
ASIG_MEN             : 38
ASIG_MUL             : 40
ASIG_OR              : 49
ASIG_RESDU           : 44
ASIG_SUMA            : 37
ASIG_XOR             : 43
BREAK                : 86
CADENA               : 71 93
CASE                 : 86
CDER                 : 23 24 29
CIZQ                 : 23 24 29
COLON                : 86 87
COMA                 : 34
COMENTARIO_EN_LINEA  : 78
COMENTARIO_MULTILINEA : 79
COMILL               : 86 86
COMP_IGUAL           : 67
CONSOLE              : 88
CONST                : 96
CONSTANTE            : 75 91
COUNT                : 81
DEC                  : 90
DEFAULT              : 87
DERECHA              : 27
DIFERENTE            : 68
DIVISION             : 63
DO                   : 22
ELSE                 : 77
ENTERO               : 69 92
EQ_ESTRIC            : 
FALSE                : 73
FOR                  : 89
FOREACH              : 27
FUNCTION             : 97
HAS                  : 26
IF                   : 76 77
IGUAL                : 23 24 29 36 91 96 98
INC                  : 
INDEX                : 80
INTERROGACION        : 
JOIN                 : 32
LDER                 : 22 27 28 76 77 77 89 97
LEN                  : 82
LET                  : 24 95
LIZQ                 : 22 27 28 76 77 77 89 97
LOG                  : 88
MAS                  : 60
MAYOR                : 65
MENOR                : 66
MOD                  : 
NEW                  : 23 24 96
NOE_ESTRIC           : 
NOT                  : 
OBJECT               : 96
OR                   : 57 59
PCOMA                : 22 23 24 25 26 27 29 30 31 32 35 55 56 57 58 59 80 81 82 86 88 90 90 96 98
PDER                 : 22 23 24 25 26 27 27 28 30 31 32 52 76 77 80 81 82 83 88 89 96 97
PIZQ                 : 22 23 24 25 26 27 27 28 30 31 32 52 76 77 80 81 82 83 88 89 96 97
POP                  : 31
POTENCIA             : 64
PROD                 : 62
PUNTO                : 25 26 27 30 31 32 80 81 88 98
PUSH                 : 30
RESTA                : 61
SET                  : 23 24
SWITCH               : 83
THIS                 : 98
TRUE                 : 72
VAR                  : 23 29 35 94
VARIABLE             : 27 74 91
WHILE                : 22 28
error                : 

Nonterminals, with rules where they appear

algoritmo            : 1 2
asignacion           : 3 90
case                 : 84
codigo               : 2 22 28 76 77 77 86 87 89 0
comentarios          : 6
comparacion          : 22 28 55 56 56 57 57 76 77 90
comparaciones        : 15
condicionFor         : 89
conjunto             : 23 24 29 34 97
console              : 21 27
crearFunction        : 11
crearObjeto          : 10
crearVariable        : 9
cuerpoFunction       : 97
cuerpoSwitch         : 83
default              : 85
estructuraArreglo    : 12
estructuraMap        : 18
expresion            : 25 26 30 35 51 52 54 54 58 58 59 59 80 83
funcionesMap         : 19
instruccionVL        : 91
metodosArreglos      : 16
metodosTupla         : 20
operadorComp         : 54
operadorMat          : 51 52
sentenciaAND         : 14
sentenciaDo          : 17
sentenciaFor         : 8
sentenciaIf          : 5
sentenciaOR          : 13
sentenciaWHILE       : 4
switch               : 7
tipoasignacion       : 35
valor                : 33 34 51 52 53 86
variables            : 23 24 25 26 27 29 30 31 32 35 70 80 81 81 82 90 96 97 98 98

Parsing method: LALR

state 0

    (0) S' -> . codigo
    (1) codigo -> . algoritmo
    (2) codigo -> . algoritmo codigo
    (3) algoritmo -> . asignacion
    (4) algoritmo -> . sentenciaWHILE
    (5) algoritmo -> . sentenciaIf
    (6) algoritmo -> . comentarios
    (7) algoritmo -> . switch
    (8) algoritmo -> . sentenciaFor
    (9) algoritmo -> . crearVariable
    (10) algoritmo -> . crearObjeto
    (11) algoritmo -> . crearFunction
    (12) algoritmo -> . estructuraArreglo
    (13) algoritmo -> . sentenciaOR
    (14) algoritmo -> . sentenciaAND
    (15) algoritmo -> . comparaciones
    (16) algoritmo -> . metodosArreglos
    (17) algoritmo -> . sentenciaDo
    (18) algoritmo -> . estructuraMap
    (19) algoritmo -> . funcionesMap
    (20) algoritmo -> . metodosTupla
    (21) algoritmo -> . console
    (35) asignacion -> . VAR variables tipoasignacion expresion PCOMA
    (28) sentenciaWHILE -> . WHILE PIZQ comparacion PDER LIZQ codigo LDER
    (76) sentenciaIf -> . IF PIZQ comparacion PDER LIZQ codigo LDER
    (77) sentenciaIf -> . IF PIZQ comparacion PDER LIZQ codigo LDER ELSE LIZQ codigo LDER
    (78) comentarios -> . COMENTARIO_EN_LINEA
    (79) comentarios -> . COMENTARIO_MULTILINEA
    (83) switch -> . SWITCH PIZQ expresion PDER cuerpoSwitch
    (89) sentenciaFor -> . FOR PIZQ condicionFor PDER LIZQ codigo LDER
    (91) crearVariable -> . instruccionVL VARIABLE IGUAL CONSTANTE
    (92) crearVariable -> . ENTERO
    (93) crearVariable -> . CADENA
    (96) crearObjeto -> . CONST variables IGUAL NEW OBJECT PIZQ PDER PCOMA
    (97) crearFunction -> . FUNCTION variables PIZQ conjunto PDER LIZQ cuerpoFunction LDER
    (29) estructuraArreglo -> . VAR variables IGUAL CIZQ conjunto CDER PCOMA
    (59) sentenciaOR -> . expresion OR expresion PCOMA
    (58) sentenciaAND -> . expresion AND expresion PCOMA
    (55) comparaciones -> . comparacion PCOMA
    (56) comparaciones -> . comparacion AND comparacion PCOMA
    (57) comparaciones -> . comparacion OR comparacion PCOMA
    (30) metodosArreglos -> . variables PUNTO PUSH PIZQ expresion PDER PCOMA
    (31) metodosArreglos -> . variables PUNTO POP PIZQ PDER PCOMA
    (32) metodosArreglos -> . variables PUNTO JOIN PIZQ PDER PCOMA
    (22) sentenciaDo -> . DO LIZQ codigo LDER WHILE PIZQ comparacion PDER PCOMA
    (23) estructuraMap -> . VAR variables IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
    (24) estructuraMap -> . LET variables IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
    (25) funcionesMap -> . variables PUNTO ADD PIZQ expresion PDER PCOMA
    (26) funcionesMap -> . variables PUNTO HAS PIZQ expresion PDER PCOMA
    (27) funcionesMap -> . variables PUNTO FOREACH PIZQ PIZQ VARIABLE PDER DERECHA LIZQ console LDER PDER PCOMA
    (80) metodosTupla -> . variables PUNTO INDEX PIZQ expresion PDER PCOMA
    (81) metodosTupla -> . variables PUNTO COUNT PIZQ variables PDER PCOMA
    (82) metodosTupla -> . LEN PIZQ variables PDER PCOMA
    (88) console -> . CONSOLE PUNTO LOG PIZQ PDER PCOMA
    (94) instruccionVL -> . VAR
    (95) instruccionVL -> . LET
    (51) expresion -> . valor operadorMat expresion
    (52) expresion -> . PIZQ valor operadorMat expresion PDER
    (53) expresion -> . valor
    (54) comparacion -> . expresion operadorComp expresion
    (74) variables -> . VARIABLE
    (75) variables -> . CONSTANTE
    (69) valor -> . ENTERO
    (70) valor -> . variables
    (71) valor -> . CADENA
    (72) valor -> . TRUE
    (73) valor -> . FALSE

    VAR             shift and go to state 22
    WHILE           shift and go to state 25
    IF              shift and go to state 28
    COMENTARIO_EN_LINEA shift and go to state 29
    COMENTARIO_MULTILINEA shift and go to state 30
    SWITCH          shift and go to state 31
    FOR             shift and go to state 32
    ENTERO          shift and go to state 36
    CADENA          shift and go to state 37
    CONST           shift and go to state 38
    FUNCTION        shift and go to state 39
    DO              shift and go to state 40
    LET             shift and go to state 41
    LEN             shift and go to state 42
    CONSOLE         shift and go to state 43
    PIZQ            shift and go to state 26
    VARIABLE        shift and go to state 34
    CONSTANTE       shift and go to state 35
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

    codigo                         shift and go to state 1
    algoritmo                      shift and go to state 2
    asignacion                     shift and go to state 3
    sentenciaWHILE                 shift and go to state 4
    sentenciaIf                    shift and go to state 5
    comentarios                    shift and go to state 6
    switch                         shift and go to state 7
    sentenciaFor                   shift and go to state 8
    crearVariable                  shift and go to state 9
    crearObjeto                    shift and go to state 10
    crearFunction                  shift and go to state 11
    estructuraArreglo              shift and go to state 12
    sentenciaOR                    shift and go to state 13
    sentenciaAND                   shift and go to state 14
    comparaciones                  shift and go to state 15
    metodosArreglos                shift and go to state 16
    sentenciaDo                    shift and go to state 17
    estructuraMap                  shift and go to state 18
    funcionesMap                   shift and go to state 19
    metodosTupla                   shift and go to state 20
    console                        shift and go to state 21
    variables                      shift and go to state 23
    expresion                      shift and go to state 24
    comparacion                    shift and go to state 27
    instruccionVL                  shift and go to state 33
    valor                          shift and go to state 44

state 1

    (0) S' -> codigo .



state 2

    (1) codigo -> algoritmo .
    (2) codigo -> algoritmo . codigo
    (1) codigo -> . algoritmo
    (2) codigo -> . algoritmo codigo
    (3) algoritmo -> . asignacion
    (4) algoritmo -> . sentenciaWHILE
    (5) algoritmo -> . sentenciaIf
    (6) algoritmo -> . comentarios
    (7) algoritmo -> . switch
    (8) algoritmo -> . sentenciaFor
    (9) algoritmo -> . crearVariable
    (10) algoritmo -> . crearObjeto
    (11) algoritmo -> . crearFunction
    (12) algoritmo -> . estructuraArreglo
    (13) algoritmo -> . sentenciaOR
    (14) algoritmo -> . sentenciaAND
    (15) algoritmo -> . comparaciones
    (16) algoritmo -> . metodosArreglos
    (17) algoritmo -> . sentenciaDo
    (18) algoritmo -> . estructuraMap
    (19) algoritmo -> . funcionesMap
    (20) algoritmo -> . metodosTupla
    (21) algoritmo -> . console
    (35) asignacion -> . VAR variables tipoasignacion expresion PCOMA
    (28) sentenciaWHILE -> . WHILE PIZQ comparacion PDER LIZQ codigo LDER
    (76) sentenciaIf -> . IF PIZQ comparacion PDER LIZQ codigo LDER
    (77) sentenciaIf -> . IF PIZQ comparacion PDER LIZQ codigo LDER ELSE LIZQ codigo LDER
    (78) comentarios -> . COMENTARIO_EN_LINEA
    (79) comentarios -> . COMENTARIO_MULTILINEA
    (83) switch -> . SWITCH PIZQ expresion PDER cuerpoSwitch
    (89) sentenciaFor -> . FOR PIZQ condicionFor PDER LIZQ codigo LDER
    (91) crearVariable -> . instruccionVL VARIABLE IGUAL CONSTANTE
    (92) crearVariable -> . ENTERO
    (93) crearVariable -> . CADENA
    (96) crearObjeto -> . CONST variables IGUAL NEW OBJECT PIZQ PDER PCOMA
    (97) crearFunction -> . FUNCTION variables PIZQ conjunto PDER LIZQ cuerpoFunction LDER
    (29) estructuraArreglo -> . VAR variables IGUAL CIZQ conjunto CDER PCOMA
    (59) sentenciaOR -> . expresion OR expresion PCOMA
    (58) sentenciaAND -> . expresion AND expresion PCOMA
    (55) comparaciones -> . comparacion PCOMA
    (56) comparaciones -> . comparacion AND comparacion PCOMA
    (57) comparaciones -> . comparacion OR comparacion PCOMA
    (30) metodosArreglos -> . variables PUNTO PUSH PIZQ expresion PDER PCOMA
    (31) metodosArreglos -> . variables PUNTO POP PIZQ PDER PCOMA
    (32) metodosArreglos -> . variables PUNTO JOIN PIZQ PDER PCOMA
    (22) sentenciaDo -> . DO LIZQ codigo LDER WHILE PIZQ comparacion PDER PCOMA
    (23) estructuraMap -> . VAR variables IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
    (24) estructuraMap -> . LET variables IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
    (25) funcionesMap -> . variables PUNTO ADD PIZQ expresion PDER PCOMA
    (26) funcionesMap -> . variables PUNTO HAS PIZQ expresion PDER PCOMA
    (27) funcionesMap -> . variables PUNTO FOREACH PIZQ PIZQ VARIABLE PDER DERECHA LIZQ console LDER PDER PCOMA
    (80) metodosTupla -> . variables PUNTO INDEX PIZQ expresion PDER PCOMA
    (81) metodosTupla -> . variables PUNTO COUNT PIZQ variables PDER PCOMA
    (82) metodosTupla -> . LEN PIZQ variables PDER PCOMA
    (88) console -> . CONSOLE PUNTO LOG PIZQ PDER PCOMA
    (94) instruccionVL -> . VAR
    (95) instruccionVL -> . LET
    (51) expresion -> . valor operadorMat expresion
    (52) expresion -> . PIZQ valor operadorMat expresion PDER
    (53) expresion -> . valor
    (54) comparacion -> . expresion operadorComp expresion
    (74) variables -> . VARIABLE
    (75) variables -> . CONSTANTE
    (69) valor -> . ENTERO
    (70) valor -> . variables
    (71) valor -> . CADENA
    (72) valor -> . TRUE
    (73) valor -> . FALSE

  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for COMENTARIO_EN_LINEA resolved as shift
  ! shift/reduce conflict for COMENTARIO_MULTILINEA resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for CADENA resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for LEN resolved as shift
  ! shift/reduce conflict for CONSOLE resolved as shift
  ! shift/reduce conflict for PIZQ resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for CONSTANTE resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    $end            reduce using rule 1 (codigo -> algoritmo .)
    LDER            reduce using rule 1 (codigo -> algoritmo .)
    BREAK           reduce using rule 1 (codigo -> algoritmo .)
    VAR             shift and go to state 22
    WHILE           shift and go to state 25
    IF              shift and go to state 28
    COMENTARIO_EN_LINEA shift and go to state 29
    COMENTARIO_MULTILINEA shift and go to state 30
    SWITCH          shift and go to state 31
    FOR             shift and go to state 32
    ENTERO          shift and go to state 36
    CADENA          shift and go to state 37
    CONST           shift and go to state 38
    FUNCTION        shift and go to state 39
    DO              shift and go to state 40
    LET             shift and go to state 41
    LEN             shift and go to state 42
    CONSOLE         shift and go to state 43
    PIZQ            shift and go to state 26
    VARIABLE        shift and go to state 34
    CONSTANTE       shift and go to state 35
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46

  ! VAR             [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! WHILE           [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! IF              [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! COMENTARIO_EN_LINEA [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! COMENTARIO_MULTILINEA [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! SWITCH          [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! FOR             [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! ENTERO          [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! CADENA          [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! CONST           [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! FUNCTION        [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! DO              [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! LET             [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! LEN             [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! CONSOLE         [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! PIZQ            [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! VARIABLE        [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! CONSTANTE       [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! TRUE            [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! FALSE           [ reduce using rule 1 (codigo -> algoritmo .) ]

    algoritmo                      shift and go to state 2
    codigo                         shift and go to state 47
    asignacion                     shift and go to state 3
    sentenciaWHILE                 shift and go to state 4
    sentenciaIf                    shift and go to state 5
    comentarios                    shift and go to state 6
    switch                         shift and go to state 7
    sentenciaFor                   shift and go to state 8
    crearVariable                  shift and go to state 9
    crearObjeto                    shift and go to state 10
    crearFunction                  shift and go to state 11
    estructuraArreglo              shift and go to state 12
    sentenciaOR                    shift and go to state 13
    sentenciaAND                   shift and go to state 14
    comparaciones                  shift and go to state 15
    metodosArreglos                shift and go to state 16
    sentenciaDo                    shift and go to state 17
    estructuraMap                  shift and go to state 18
    funcionesMap                   shift and go to state 19
    metodosTupla                   shift and go to state 20
    console                        shift and go to state 21
    variables                      shift and go to state 23
    expresion                      shift and go to state 24
    comparacion                    shift and go to state 27
    instruccionVL                  shift and go to state 33
    valor                          shift and go to state 44

state 3

    (3) algoritmo -> asignacion .

    VAR             reduce using rule 3 (algoritmo -> asignacion .)
    WHILE           reduce using rule 3 (algoritmo -> asignacion .)
    IF              reduce using rule 3 (algoritmo -> asignacion .)
    COMENTARIO_EN_LINEA reduce using rule 3 (algoritmo -> asignacion .)
    COMENTARIO_MULTILINEA reduce using rule 3 (algoritmo -> asignacion .)
    SWITCH          reduce using rule 3 (algoritmo -> asignacion .)
    FOR             reduce using rule 3 (algoritmo -> asignacion .)
    ENTERO          reduce using rule 3 (algoritmo -> asignacion .)
    CADENA          reduce using rule 3 (algoritmo -> asignacion .)
    CONST           reduce using rule 3 (algoritmo -> asignacion .)
    FUNCTION        reduce using rule 3 (algoritmo -> asignacion .)
    DO              reduce using rule 3 (algoritmo -> asignacion .)
    LET             reduce using rule 3 (algoritmo -> asignacion .)
    LEN             reduce using rule 3 (algoritmo -> asignacion .)
    CONSOLE         reduce using rule 3 (algoritmo -> asignacion .)
    PIZQ            reduce using rule 3 (algoritmo -> asignacion .)
    VARIABLE        reduce using rule 3 (algoritmo -> asignacion .)
    CONSTANTE       reduce using rule 3 (algoritmo -> asignacion .)
    TRUE            reduce using rule 3 (algoritmo -> asignacion .)
    FALSE           reduce using rule 3 (algoritmo -> asignacion .)
    $end            reduce using rule 3 (algoritmo -> asignacion .)
    LDER            reduce using rule 3 (algoritmo -> asignacion .)
    BREAK           reduce using rule 3 (algoritmo -> asignacion .)


state 4

    (4) algoritmo -> sentenciaWHILE .

    VAR             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    WHILE           reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    IF              reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    COMENTARIO_EN_LINEA reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    COMENTARIO_MULTILINEA reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    SWITCH          reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    FOR             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    ENTERO          reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    CADENA          reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    CONST           reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    FUNCTION        reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    DO              reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    LET             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    LEN             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    CONSOLE         reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    PIZQ            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    VARIABLE        reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    CONSTANTE       reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    TRUE            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    FALSE           reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    $end            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    LDER            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    BREAK           reduce using rule 4 (algoritmo -> sentenciaWHILE .)


state 5

    (5) algoritmo -> sentenciaIf .

    VAR             reduce using rule 5 (algoritmo -> sentenciaIf .)
    WHILE           reduce using rule 5 (algoritmo -> sentenciaIf .)
    IF              reduce using rule 5 (algoritmo -> sentenciaIf .)
    COMENTARIO_EN_LINEA reduce using rule 5 (algoritmo -> sentenciaIf .)
    COMENTARIO_MULTILINEA reduce using rule 5 (algoritmo -> sentenciaIf .)
    SWITCH          reduce using rule 5 (algoritmo -> sentenciaIf .)
    FOR             reduce using rule 5 (algoritmo -> sentenciaIf .)
    ENTERO          reduce using rule 5 (algoritmo -> sentenciaIf .)
    CADENA          reduce using rule 5 (algoritmo -> sentenciaIf .)
    CONST           reduce using rule 5 (algoritmo -> sentenciaIf .)
    FUNCTION        reduce using rule 5 (algoritmo -> sentenciaIf .)
    DO              reduce using rule 5 (algoritmo -> sentenciaIf .)
    LET             reduce using rule 5 (algoritmo -> sentenciaIf .)
    LEN             reduce using rule 5 (algoritmo -> sentenciaIf .)
    CONSOLE         reduce using rule 5 (algoritmo -> sentenciaIf .)
    PIZQ            reduce using rule 5 (algoritmo -> sentenciaIf .)
    VARIABLE        reduce using rule 5 (algoritmo -> sentenciaIf .)
    CONSTANTE       reduce using rule 5 (algoritmo -> sentenciaIf .)
    TRUE            reduce using rule 5 (algoritmo -> sentenciaIf .)
    FALSE           reduce using rule 5 (algoritmo -> sentenciaIf .)
    $end            reduce using rule 5 (algoritmo -> sentenciaIf .)
    LDER            reduce using rule 5 (algoritmo -> sentenciaIf .)
    BREAK           reduce using rule 5 (algoritmo -> sentenciaIf .)


state 6

    (6) algoritmo -> comentarios .

    VAR             reduce using rule 6 (algoritmo -> comentarios .)
    WHILE           reduce using rule 6 (algoritmo -> comentarios .)
    IF              reduce using rule 6 (algoritmo -> comentarios .)
    COMENTARIO_EN_LINEA reduce using rule 6 (algoritmo -> comentarios .)
    COMENTARIO_MULTILINEA reduce using rule 6 (algoritmo -> comentarios .)
    SWITCH          reduce using rule 6 (algoritmo -> comentarios .)
    FOR             reduce using rule 6 (algoritmo -> comentarios .)
    ENTERO          reduce using rule 6 (algoritmo -> comentarios .)
    CADENA          reduce using rule 6 (algoritmo -> comentarios .)
    CONST           reduce using rule 6 (algoritmo -> comentarios .)
    FUNCTION        reduce using rule 6 (algoritmo -> comentarios .)
    DO              reduce using rule 6 (algoritmo -> comentarios .)
    LET             reduce using rule 6 (algoritmo -> comentarios .)
    LEN             reduce using rule 6 (algoritmo -> comentarios .)
    CONSOLE         reduce using rule 6 (algoritmo -> comentarios .)
    PIZQ            reduce using rule 6 (algoritmo -> comentarios .)
    VARIABLE        reduce using rule 6 (algoritmo -> comentarios .)
    CONSTANTE       reduce using rule 6 (algoritmo -> comentarios .)
    TRUE            reduce using rule 6 (algoritmo -> comentarios .)
    FALSE           reduce using rule 6 (algoritmo -> comentarios .)
    $end            reduce using rule 6 (algoritmo -> comentarios .)
    LDER            reduce using rule 6 (algoritmo -> comentarios .)
    BREAK           reduce using rule 6 (algoritmo -> comentarios .)


state 7

    (7) algoritmo -> switch .

    VAR             reduce using rule 7 (algoritmo -> switch .)
    WHILE           reduce using rule 7 (algoritmo -> switch .)
    IF              reduce using rule 7 (algoritmo -> switch .)
    COMENTARIO_EN_LINEA reduce using rule 7 (algoritmo -> switch .)
    COMENTARIO_MULTILINEA reduce using rule 7 (algoritmo -> switch .)
    SWITCH          reduce using rule 7 (algoritmo -> switch .)
    FOR             reduce using rule 7 (algoritmo -> switch .)
    ENTERO          reduce using rule 7 (algoritmo -> switch .)
    CADENA          reduce using rule 7 (algoritmo -> switch .)
    CONST           reduce using rule 7 (algoritmo -> switch .)
    FUNCTION        reduce using rule 7 (algoritmo -> switch .)
    DO              reduce using rule 7 (algoritmo -> switch .)
    LET             reduce using rule 7 (algoritmo -> switch .)
    LEN             reduce using rule 7 (algoritmo -> switch .)
    CONSOLE         reduce using rule 7 (algoritmo -> switch .)
    PIZQ            reduce using rule 7 (algoritmo -> switch .)
    VARIABLE        reduce using rule 7 (algoritmo -> switch .)
    CONSTANTE       reduce using rule 7 (algoritmo -> switch .)
    TRUE            reduce using rule 7 (algoritmo -> switch .)
    FALSE           reduce using rule 7 (algoritmo -> switch .)
    $end            reduce using rule 7 (algoritmo -> switch .)
    LDER            reduce using rule 7 (algoritmo -> switch .)
    BREAK           reduce using rule 7 (algoritmo -> switch .)


state 8

    (8) algoritmo -> sentenciaFor .
